--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang='en-ca'>
 <head>
     <meta charset="utf-8">
-    <title>My Portfolio</title>
-    <meta name="handheldfriendly" content="true">
+    <title>My Portfolio - Erin Elizabeth's graphic design work - Ottawa, Canada</title>
+    <meta name="description" content="My Portfolio: Erin Elizabeth's graphic design work">
     <meta name="mobileoptimized" content="240">
     <meta name="viewport" content="width=device-width,intial-scale=1">
     <link href="css/modules.css" rel="stylesheet">
