--- a/photo-three.html
+++ b/photo-three.html
@@ -18,7 +18,7 @@
         <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
             <h1>Movember - event poster</h1>
                 <p>An event poster made for an event in Toronto. Made in Illustrator.</p>
-            <a href="photo-three.html"><img class="box" src="images/eventposter2.png" alt="image"></a>
+            <a href="photo-three.html"><img class="box" src="images/eventposter.jpg" alt="image"></a>
         </div>
     </div>
 
