--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="unit unit-xs-1-3 unit-s-1-3 unit-m-1-3 unit-l-1-3">
                 <figure>
-                    <a href="https://www.github.com/"><img class="github" src="images/github.svg" alt="github">
+                    <a href="https://github.com/erinborgmeyer"><img class="github" src="images/github.svg" alt="github">
                 </figure>
             </div>
 
