--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="unit unit-xs-1-3 unit-s-1-3 unit-m-1-3 unit-l-1-3">
                 <figure>
-                    <a href="mailto:hey@erinelizabethb.ca"><img class="email" src="images/email.svg" alt="email">
+                    <a href="mailto:erin.borgmeyer@gmail.com"><img class="email" src="images/email.svg" alt="email">
                 </figure>
             </div> 
         </div>
