--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
     
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
-                <li><a href="photo-seven.html"><img class="box" src="images/walle-poster-cover.jpg"></a></li>
+                <li><a href="photo-seven.html"><img class="box" src="images/peach-copy.jpg"></a></li>
             </div>
     
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
