--- a/photo-seven.html
+++ b/photo-seven.html
@@ -18,7 +18,7 @@
         <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
             <h1>Wall-e Movie Poster - print</h1>
                 <p>A print poster I created for the movie Wall-e. Made in Photoshop.</p>
-            <a href="photo-seven.html"><img class="box" src="images/wallee.jpg" alt="image"></a>
+            <a href="photo-seven.html"><img class="box" src="images/peach-copy.jpg" alt="image"></a>
         </div>
     </div>
     
