--- a/photo-seven.html
+++ b/photo-seven.html
@@ -16,8 +16,8 @@
     
     <div class="photo">
         <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
-            <h1>Wall-e Movie Poster - print</h1>
-                <p>A print poster I created for the movie Wall-e. Made in Photoshop.</p>
+            <h1>Peachy</h1>
+                <p>Peach emoji neon sign made in Photoshop.</p>
             <a href="photo-seven.html"><img class="box" src="images/peach-copy.jpg" alt="image"></a>
         </div>
     </div>
