--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
             <p class="about" class="text text-center milli pad-top">My name is</p>
                 <img class="name" src="images/name-portfolio.svg" alt="name">
-            <p class="about" class="text-center milli pad-top">I am a graphic designer living in Ottawa. I am passionate about web design, typography and motion design.
+            <p class="about" class="text-center milli pad-top">I am a graphic designer living in Ottawa. I am passionate about web design, typography and branding.
             </p>
     </header>   
 
